# claude-code-from-scratch

./: .env.example  .gitignore  LICENSE  README.md  core.py  e02_tool_use.py  e03_todo_write.py  e04_sub_agent.py  e05_skill_loading.py  e06_context_compact.py  e07_task_system.py  e08_background_tasks.py  e09_agents_team.py  e10_team_protocols.py  e11_autonomous_agents.py  e12_worktree_task_isolation.py  e13_streaming.py  e14_tools_extended.py  e15_permissions.py  e16_event_bus.py  perception_action_loop.py  pyproject.toml  requirements.txt  skill_loading.py  sub_agent.py  test_core.py  test_integration.py  todo_write.py  tool_use.py
