[project]
name = "claude-code-from-scratch"
version = "0.1.0"
description = "Exploring how Claude works under the hood by building a coding agent from scratch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0.1",
]

[project.scripts]
agent = "tool_use:main"
s01 = "perception_action_loop:main"
s02 = "tool_use:main"

[tool.uv]
dev-dependencies = []
package = true

[tool.setuptools]
py-modules = ["core", "perception_action_loop", "tool_use"]

