[project]
name = "claude-code-from-scratch"
version = "0.1.0"
description = "Exploring how Claude works under the hood by building a coding agent from scratch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0.1",
]

[project.scripts]
agent = "skill_loading:main"
e01 = "perception_action_loop:main"
e02 = "tool_use:main"
e03 = "todo_write:main"
e04 = "sub_agent:main"
e05 = "skill_loading:main"
e06 = "context_compact:main"

[tool.uv]
dev-dependencies = []
package = true

[tool.setuptools]
py-modules = ["core", "perception_action_loop", "tool_use", "todo_write", "sub_agent", "skill_loading", "context_compact"]

