[project]
name = "claude-code-from-scratch"
version = "0.1.0"
description = "Exploring how Claude works under the hood by building a coding agent from scratch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0.1",
]

[project.scripts]
agent = "e11_autonomous_agents:main"
e01 = "e01_perception_action_loop:main"
e02 = "e02_tool_use:main"
e03 = "e03_todo_write:main"
e04 = "e04_sub_agent:main"
e05 = "e05_skill_loading:main"
e06 = "e06_context_compact:main"
e07 = "e07_task_system:main"
e08 = "e08_background_tasks:main"
e09 = "e09_agents_team:main"
e10 = "e10_team_protocols:main"
e11 = "e11_autonomous_agents:main"

[tool.uv]
dev-dependencies = []
package = true

[tool.setuptools]
py-modules = [
    "core",
    "e01_perception_action_loop",
    "e02_tool_use",
    "e03_todo_write",
    "e04_sub_agent",
    "e05_skill_loading",
    "e06_context_compact",
    "e07_task_system",
    "e08_background_tasks",
    "e09_agents_team",
    "e10_team_protocols",
    "e11_autonomous_agents",
]

